Input jump fix.

--- a/themes/modern/less/modern.less
+++ b/themes/modern/less/modern.less
@@ -82,7 +82,10 @@ header {
   .dropdown-menu .active a:hover { background-color: @header-bg; }
 
   .form-control { border: 0; }
-  .form-control:focus { border-bottom: 3px solid @gold; }
+  .form-control:focus {
+    padding-bottom: 4px;
+    border-bottom: 3px solid @gold;
+  }
 
   .navbar-brand {
     width: 200px;
